# MessengerApp

./: .gitignore  CMakeLists.txt
.github/workflows/: CI.yml
src/: CMakeLists.txt  mainWindow.cpp  mainWindow.hpp
tests/: CMakeLists.txt  mainWindowTest.cpp
